<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">HAM</string>
    <string name="food">food</string>
    <string name="dorms">dorms</string>
    <string name="halls">halls</string>
    <string name="homewood_accessibility_map_logo">Homewood Accessibility Map logo</string>
    <string name="search">Search</string>
    <string name="amr_ii">AMR II</string>
    <string name="amr_i">AMR I</string>
    <string name="amr_iii">AMR III</string>
    <string name="back">BACK</string>
    <string name="ham_logo">HAM logo</string>
    <string name="hopkins_cafe">Hopkins Cafe</string>
    <string name="levering_kitchens">Levering Kitchens</string>
    <string name="brody_cafe">Brody Cafe</string>
    <string name="map">map</string>
    <string name="hodson_hall">Hodson Hall</string>
    <string name="krieger_hall">Krieger Hall</string>
    <string name="gilman_hall">Gilman Hall</string>
    <string name="map_id">15b75140030a09ec</string>
</resources>