<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_onSecondaryContainer"
    tools:context=".FoodPage">

    <Button
        android:id="@+id/gilmanBtn"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/gilman_hall"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/kriegerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />

    <Button
        android:id="@+id/kriegerBtn"
        android:textSize="28sp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/krieger_hall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <Button
        android:id="@+id/hodsonBtn"
        android:textSize="28sp"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/hodson_hall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kriegerBtn"
        app:layout_constraintVertical_bias="0.145" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_logo_foreground"
        android:contentDescription="@string/ham_logo"
        app:layout_constraintBottom_toTopOf="@+id/gilmanBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>